# telegram-ml-contest-2nd-round

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  train_gru.py
scripts/: clear_data.py  ctokenizer.py  gh_dataset.py  gru_model.py  gru_trainer.py  languages_list.py  paths.py  train_gru.py
solution/: CMakeLists.txt
solution/src/: gru.c  gru.h  matrix.h  test.c  tokenizer.c  tokenizer.h
src/: embed_weights.c  gru.c  gru.h  lang_names.h  matrix.c  svc.c  test.c  tglang.c  tglang.h  tokenizer.c
train/: FilterData.ipynb  TestCGRU.ipynb  TestGRU.ipynb  cgru.py  ctokenizer.py  gh_dataset.py  gru_model.py  gru_trainer.py  languages_list.py  paths.py  plot_cm.py  prepare_data_for_svc.py  test_final_model.py  test_gru.py  train_gru.py  train_tokenizer.py  transform_gru.py
